// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContinueButton /> render() should render the Continue button as loading 1`] = `
<button
  class="wrapper fill primary medium isDisabled"
  disabled=""
  type="button"
>
  <div
    class="spinner spinner-border"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
  Continue
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 2`] = `
<button
  class="wrapper fill primary medium isDisabled"
  disabled=""
  type="button"
>
  <div
    class="spinner spinner-border"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
  Continue
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 3`] = `
<button
  class="wrapper full-width fill primary medium isDisabled"
  disabled=""
  type="button"
>
  <div
    class="spinner spinner-border"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
  <span
    class="full-width"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 1`] = `
<button
  class="wrapper fill primary medium isDisabled"
  disabled=""
  type="button"
>
  Continue
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 2`] = `
<button
  class="wrapper fill primary medium isDisabled"
  disabled=""
  type="button"
>
  Continue
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 3`] = `
<button
  class="wrapper full-width fill primary medium isDisabled"
  disabled=""
  type="button"
>
  <span
    class="full-width"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 1`] = `
<button
  class="wrapper fill primary medium"
  type="button"
>
  Continue
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 2`] = `
<button
  class="wrapper fill primary medium"
  type="button"
>
  Continue
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 3`] = `
<button
  class="wrapper full-width fill primary medium"
  type="button"
>
  <span
    class="full-width"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 4`] = `null`;
